# RD

./: .gitignore  README.md
app/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: celery.py  settings.py  urls.py
app/bash_scripts/: start.sh
app/core/: admin.py  forms.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py
app/core/management/commands/: filltestdata.py
app/core/static/js/: copy_email.js
app/core/templates/: change_list.html  register.html
app/core/views/: email_views.py  network_views.py  register_views.py
app/static/js/: copy_email.js
